# Optimizers

./: LICENSE  README.rst  pyproject.toml  requirement.txt
optimizers/: interleaved_neighborhood_algorithm.py  square_neighborhood_algorithm.py
tests/: test_optimizers.py
